# ML_project

./: .gitignore  evalaution.py  evaluation_results.xlsx  financial_phrasebank.py  predictions.csv  pyproject.toml
logs/bert-base-uncased/: events.out.tfevents.1746630489.1A-AF-D8-69-F0-13.17093.0
logs/binary/answerdotai_ModernBERT-base/: events.out.tfevents.1747327291.021d91703841.7691.1
main/: dataset.py  evalaution.py  pipeline.py
results/binary/: answerdotai_ModernBERT-base.csv  distilbert_distilbert-base-uncased.csv  evaluation_results_answerdotai_ModernBERT-base.xlsx  evaluation_results_distilbert_distilbert-base-uncased.xlsx  evaluation_results_google-bert_bert-base-uncased.xlsx
results/contrastive/: answerdotai_ModernBERT-base.csv  distilbert_distilbert-base-uncased.csv  evaluation_results_answerdotai_ModernBERT-base.xlsx  evaluation_results_distilbert_distilbert-base-uncased.xlsx  evaluation_results_google-bert_bert-base-uncased.xlsx  google-bert_bert-base-uncased.csv
results/emotion/: performance_metrics.xlsx
results/emotion/binary/: distilbert_distilbert-base-uncased.csv  evaluation_results_distilbert_distilbert-base-uncased.xlsx  evaluation_results_google-bert_bert-base-uncased.xlsx  google-bert_bert-base-uncased.csv
results/emotion/contrastive/: distilbert_distilbert-base-uncased.csv  evaluation_results_distilbert_distilbert-base-uncased.xlsx  evaluation_results_google-bert_bert-base-uncased.xlsx  google-bert_bert-base-uncased.csv
results/financial/: performance_metrics.xlsx
results/news/: performance_metrics.xlsx
(+24 files in other folders)
